fix(phone) :  handle layout issue

--- a/src/components/PhoneVerificationForm/PhoneVerification.module.scss
+++ b/src/components/PhoneVerificationForm/PhoneVerification.module.scss
@@ -7,12 +7,14 @@
   padding: 2rem 5rem;
   border-radius: 10px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 .input {
   padding: 25px 0 25px 60px;
   box-shadow: 2px 2px 2px 1px #d6d6d6, -1px -1px 1px #e6e6e6;
   border: 0;
   margin: 0;
+  width: 200px;
 }
 .button {
   width: 50px;
