--- a/src/pages/PhoneRegistration/PhoneRegistration.module.scss
+++ b/src/pages/PhoneRegistration/PhoneRegistration.module.scss
@@ -3,11 +3,3 @@
   display: flex;
   align-items: center;
 }
-
-@media (max-width: 768px) {
-  .phone__registration {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-  }
-}
